Update JSON field names
